Fronted Connected